<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_theory">

    <fragment
        android:id="@+id/navigation_theory"
        android:name="com.hfad.mydiploma.ui.theory.TheoryFragment"
        android:label="@string/title_theory"
        tools:layout="@layout/fragment_theory" />

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.hfad.mydiploma.ui.tests.TestsFragment"
        android:label="@string/title_tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.hfad.mydiploma.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>