<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context="com.dipl.dsp.ActivityAuthorization">

        <ImageView
            android:id="@+id/imageEmail"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:src="@drawable/ic_baseline_mail_outline_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/Auth"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/hintEmail"
            android:textColorHighlight="@color/black"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/hintPassword"
            android:textColorHighlight="@color/black"/>


        <Button
            android:id="@+id/btnAuth"
            android:layout_width="132dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="logIn"
            android:text="@string/ButtonAuth"
            android:textSize="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>